--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "deploy:vercel": "vercel --prod",
+    "deploy:frontend": "npm run build",
+    "server": "npm --prefix server start",
+    "server:dev": "npm --prefix server run dev",
+    "install:all": "npm install && npm --prefix server install"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.23.0",
+    "dayjs": "^1.11.19",
     "jalaali-js": "^1.2.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
